; ModuleID = '/home/carl/AnghaBench/lede/package/kernel/lantiq/ltq-atm/src/extr_ltq_atm.c_invalidate_oam_htu_entry.c'
source_filename = "/home/carl/AnghaBench/lede/package/kernel/lantiq/ltq-atm/src/extr_ltq_atm.c_invalidate_oam_htu_entry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }

@OAM_F4_SEG_HTU_ENTRY = common dso_local global i32 0, align 4
@OAM_F4_TOT_HTU_ENTRY = common dso_local global i32 0, align 4
@OAM_F5_HTU_ENTRY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @invalidate_oam_htu_entry to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @invalidate_oam_htu_entry() #0 {
  %1 = load i32, i32* @OAM_F4_SEG_HTU_ENTRY, align 4
  %2 = call %struct.TYPE_2__* @HTU_ENTRY(i32 %1)
  %3 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %2, i32 0, i32 0
  store i64 0, i64* %3, align 8
  %4 = load i32, i32* @OAM_F4_TOT_HTU_ENTRY, align 4
  %5 = call %struct.TYPE_2__* @HTU_ENTRY(i32 %4)
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  store i64 0, i64* %6, align 8
  %7 = load i32, i32* @OAM_F5_HTU_ENTRY, align 4
  %8 = call %struct.TYPE_2__* @HTU_ENTRY(i32 %7)
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  store i64 0, i64* %9, align 8
  ret void
}

declare dso_local %struct.TYPE_2__* @HTU_ENTRY(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
